# lista-estruturas-de-dados

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  readme.md
include/: DequeEncadeado.hh  FilaDeque.hh  PilhaDeque.hh
src/: exercicio1.cc  exercicio3.cc  exercicio4.cc
src/estruturas-lineares/: exercicio1.cc  exercicio2.cc  exercicio3.cc  exercicio4.cc  exercicio5.cc  exercicio6.cc  exercicio7.cc
